# sezzle-calculator

./: .gitignore  README.md  docker-compose.yml
back/: .dockerignore  Dockerfile  README.md  pyproject.toml
back/app/: __init__.py  main.py
back/app/api/v1/: calculator.py  router.py
back/app/core/: __init__.py  config.py  exceptions.py
back/app/handlers/: errors.py
back/app/schemas/: calculator.py
back/app/services/: calculator.py
back/tests/: conftest.py
back/tests/api/: test_calculate_endpoint.py  test_integration.py
back/tests/unit/: test_calculator_service.py  test_config.py
front/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front/src/: index.css
front/src/api/: calculator.ts  client.ts
front/src/components/Calculator/: Calculator.module.css  Calculator.tsx
front/src/components/Display/: Display.module.css  Display.tsx
front/src/components/Keypad/: Keypad.module.css  Keypad.tsx
front/src/hooks/: useCalculator.ts
front/src/types/: calculator.ts
front/src/utils/: format.ts
front/tests/: App.test.tsx
front/tests/api/: calculator.test.ts
front/tests/components/: Calculator.test.tsx  Display.test.tsx  Keypad.test.tsx
front/tests/hooks/: useCalculator.test.ts
front/tests/utils/: format.test.ts
